@@ -32,7 +32,7 @@ class StatsValues
  public:
   StatsValues(const QString &category);
   QString value(const QString &param);
-  void update(const QString &param,const QString &value);
+  bool update(const QString &param,const QString &value);
   void render(FILE *f);
 
  private:
