@@ -25,8 +25,6 @@
 #include <QProcess>
 #include <QTimer>
 
-#include <wh/whhttpserver.h>
-
 #include "config.h"
 #include "udpcontrol.h"
 
@@ -58,7 +56,6 @@ class MainObject : public QObject
   QTimer *host_exit_timer;
   QTimer *host_watchdog_timer;
   Config *host_config;
-  WHHttpServer *host_server;
 };
 
 
