@@ -95,3 +95,5 @@
 	'glassplayerhost-fastembed.spec.in'.
 2016-02-25 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.6.5.
+2016-03-01 Fred Gleason <fredg@paravelsystems.com>
+	* Refactored Metadata updates to use WebSocket connections.
